--- a/bsa2018-DataStructures/bsa2018-DataStructures.csproj
+++ b/bsa2018-DataStructures/bsa2018-DataStructures.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>bsa2018_DataStructures</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
